Fix hexagon grid pattern clipping issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,6 @@ h3 {
 /* ===== HEXAGON GRID PATTERN ===== */
 .hexagon-bg {
   position: relative;
-  overflow: hidden;
 }
 
 .hexagon-bg::before {
@@ -62,10 +61,10 @@ h3 {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%232563eb' fill-opacity='0.05' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  opacity: 1;
+  background-repeat: repeat;
   pointer-events: none;
   z-index: 0;
 }
@@ -78,34 +77,39 @@ h3 {
 /* Animated hexagon for hero */
 .hexagon-animated {
   position: relative;
-  overflow: hidden;
 }
 
 .hexagon-animated::before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  top: -50px;
+  left: -50px;
+  right: -50px;
+  bottom: -50px;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%232563eb' fill-opacity='0.08' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: repeat;
   animation: hexFloat 20s ease-in-out infinite;
   pointer-events: none;
   z-index: 0;
 }
 
+.hexagon-animated > * {
+  position: relative;
+  z-index: 1;
+}
+
 @keyframes hexFloat {
   0%, 100% {
-    transform: translate(0, 0) scale(1);
+    transform: translate(0, 0);
   }
   25% {
-    transform: translate(10px, -10px) scale(1.02);
+    transform: translate(10px, -10px);
   }
   50% {
-    transform: translate(0, -20px) scale(1);
+    transform: translate(0, -15px);
   }
   75% {
-    transform: translate(-10px, -10px) scale(0.98);
+    transform: translate(-10px, -5px);
   }
 }
 
